Revision history for App-Doh

0.11.1    2015-08-28 12:54:54
          - Created Config stash_attr from preferences and lists in code
          - Passing tests again
          - Switched to Web::Components
          - Enhanced type constraint names
          - Renamed Web::Components loader and role
          - Made APP_DOH the env var prefix for consistancy
          - Stopped putting request object in stash
          - Made cdnjs configurable via jslibs in Config
          - Stopped using state keyword
          - Model execute now throws if method not found
          - Added support for making Debian packages
          - Added missing middleware dependecies
          - Simplified load_components signature
          - Added make-site-tarball
          - Added caching to generate make function
          - Config monikers was replace with components
          - Model get_stash was renamed to initialise_stash
          - Updated prereqs
          - Made program wrappers work in taint mode

0.10.1    2015-05-11 00:39:33
          - Fixed memory leak in component DI
          - Made User class a model component and used DI
          - Implement dependency injection in components
          - ComponentLoading returns plain text 500 if Request->new fails
          - Added post_install and uninstall commands to CLI
          - Scripts sources a local env script
          - Toolchain now builds a Debian file

0.9.1     2015-01-04 16:01:57
          - Ajax requests now use JSON not XML
          - Added model_name to request object
          - API improvement ::Functions::load_components
          - Fixed search methods external call to ack
          - Made private functions and methods lexical subs

0.8.1     2014-10-31 01:08:36
          - Updated throw call syntax
          - Fixed decoding of body parameters
          - Component and input encoding defaults to config
          - Added maximum generation run time
          - URIs now properly enscaped